# the-old-joke-archive

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Pipfile  README.md  build.sh  config.yml  dev-server.sh  docker-compose.yml  gulpfile.js  package.json  prepare_release.py  pyproject.old.toml  pyproject.toml  pytest.ini  setup.py  test-server.sh  test.ini  tox.ini
.github/: codeql-config.yml
.github/workflows/: codeql-analysis.yml  codeql-config.yml  deploy-docker.yml  e2e-test.yml  tests.yml
cypress/integration/: contribute.spec.js  errors.spec.js  landing.spec.js  root.spec.js  user.spec.js
dev/: .env  config.yml  docker-compose.yml  mosquitto.conf  mosquitto_password_file
docker/: Dockerfile  production.ini  start_toja.sh
production/: .env  Dockerfile  README.md  config.yml  docker-compose.yml
src/frontend/: aria-tabs.js  inline-edit.js  joke-extractor.js  package.json  post-link.js
src/frontend/apps/workbench/: README.md  package.json
src/frontend/plugins/: ajax-fill.js  flash.js  form-action-buttons.js  image-popup.js  joke-ratings.js  post-link.js
src/frontend/workbench/: package.json
src/theme/: _aria-menu.scss  _aria-tabs.scss  _settings.scss  app.scss  fonts.scss
src/theme/components/: _autosuggest.scss  _categories.scss  _contribute-overview.scss  _filter-list.scss  _flash.scss  _footer.scss  _header.scss  _image-popup.scss  _joke-banner.scss  _joke-rating.scss  _joke-snippet.scss  _joke-summary.scss  _results-list.scss  _snippet.scss  _timeline.scss  _verification.scss  _workbench.scss
src/theme/generic/: _alignments.scss  _anchors.scss  _application.scss  _assorted.scss  _blockquotes.scss  _buttons.scss  _chrome.scss  _color.scss  _font-sizes.scss  _forms.scss  _headings.scss  _icons.scss  _lists.scss  _margins.scss  _numbers.scss  _padding.scss  _paragraphs.scss  _separators.scss  _tables.scss
src/theme/layout/: _body.scss  _flex.scss  _general.scss  _grid.scss
src/toja/: __init__.py  celery.py  config.py  permissions.py  routes.py  search.py  session.py  tests.py  translation.py  util.py
src/toja/models/: __init__.py  image.py  review.py  transcription.py  user.py
src/toja/scripts/: __init__.py  config.jinja2  config.py  cron.py  db.py
src/toja/static/: frontend.js  plugins.js  theme.css  workbench.js
src/toja/static/workbench/: app.js  app.js.map  chunk-vendors.js  chunk-vendors.js.map
src/toja/tasks/: __init__.py  base.py  cron.py  joke.py  middleware.py  ocr.py  search.py
src/toja/templates/: 404.jinja2  centred_layout.jinja2  centred_narrow_layout.jinja2  full_width_layout.jinja2  layout.jinja2  root.jinja2
src/toja/templates/admin/: index.jinja2  jokes.jinja2  search.jinja2
src/toja/templates/contribute/: index.jinja2  workbench.jinja2
src/toja/templates/crowdsourcing/: identify_jokes_app.jinja2  identify_jokes_tasks.jinja2  index.jinja2  verify_jokes.jinja2
src/toja/templates/exceptions/: 403.jinja2  404.jinja2
src/toja/templates/explore/: mlt.jinja2
src/toja/templates/jokes/: view.jinja2
src/toja/templates/layout/: _header.jinja2  application.jinja2  base.jinja2  default.jinja2  minimal.jinja2
src/toja/templates/layouts/: base.jinja2  centred.jinja2  centred_narrow.jinja2  full_width.jinja2
src/toja/templates/macros/: dates.jinja2  form.jinja2  forms.jinja2  icons.jinja2  jokes.jinja2  numbers.jinja2  search.jinja2  sources.jinja2  transcriptions.jinja2  ui.jinja2
src/toja/templates/search/: index.jinja2
src/toja/templates/sources/: edit.jinja2  index.jinja2  list.jinja2  new.jinja2  upload.jinja2  view.jinja2
src/toja/templates/users/: confirm.jinja2  edit.jinja2  edit_permissions.jinja2  forgotten_password.jinja2  index.jinja2  list.jinja2  login.jinja2  logout.jinja2  register.jinja2  view.jinja2
src/toja/tests/: __init__.py  views.py
src/toja/views/: admin.py  contribute.py  crowdsourcing.py  default.py  exceptions.py  explore.py  images.py  jokes.py  search.py  sources.py  users.py
tests/: .env  base.py  config.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  test_dummy.py  util.ts
tests/api_tests/: conftest.py  test_core.py  util.py
tests/api_tests/test_joke/: __init__.py  test_create.py  test_delete.py  test_edit.py  test_get.py
tests/api_tests/test_source/: __init__.py  test_create.py  test_delete.py  test_edit.py  test_get.py
tests/api_tests/test_user/: __init__.py  test_create.py  test_delete.py  test_edit.py  test_get.py  test_login.py  test_reset_password.py
tests/basic/: landing_page.ts
tests/e2e/: package-lock.json  package.json
tests/e2e/basic/: landing_page.spec.ts
tests/e2e/tests/: database.js  local-persistence.js
tests/functional_tests/: conftest.py
tests/functional_tests/test_actions/: test_user_actions.py
toja/: __about__.py  __init__.py  __main__.py  async_meili.py  text_utils.py  utils.py  validation.py
toja/actions/: __init__.py  user.py
toja/background/: __init__.py
toja/cli/: __init__.py  actions.py
toja/models/: __init__.py  base.py  joke.py  user.py
toja/server/: __init__.py  api.py  handlers.py
toja/server/frontend/: index.html  package-lock.json  package.json  rollup.config.js  tailwind.config.js  vite.config.ts
toja/server/handlers/: __init__.py  admin.py  base.py  explore.py  frontend.py  joke.py  source.py  test.py  user.py
toja/setup/: __init__.py
(+124 files in other folders)
