[tool.poetry]
name = "toja"
version = "0.1.2"
description = "The Old Joke Archive"
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyramid = "^1.10.4"
pyramid-jinja2 = "^2.8"
pyramid-tm = "^2.4"
sqlalchemy = "^1.3.20"
transaction = "^3.0.0"
waitress = "^2.1.1"
click = "^7.1.2"
pyramid-nacl-session = "^1.0.0"
decorator = "^4.4.2"
cerberus = "^1.3.2"
sqlalchemy-json = "^0.4.0"
email-validator = "^1.1.1"
pillow = "^9.0.0"
tesserocr = "^2.5.1"
elasticsearch-dsl = "^7.3.0"
inflect = "^4.1.0"
dramatiq = {extras = ["redis", "rabbitmq", "watch"], version = "^1.9.0"}
psycopg2 = {version = "^2.8.5", optional = true}
pyramid_exclog = "^1.0"
"zope.sqlalchemy" = "^1.3"

[tool.poetry.dev-dependencies]
pyramid-debugtoolbar = "^4.6.1"
flake8 = "^3.8.4"
flake8-print = "^3.1.4"
pre-commit = "^2.7.1"
tox = "^3.20.1"

[tool.poetry.extras]
postgresql = ["psycopg2"]

[tool.poetry.scripts]
toja = "toja.scripts:main"

[tool.poetry.plugins."paste.app_factory"]
main = "toja:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
